<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/drawer_background"
    tools:context=".PlayerLayout">

    <LinearLayout
        android:id="@+id/item_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageButton
            android:id="@+id/sliding_top_control"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_play_arrow_black_24dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/play"/>

        <RelativeLayout
            android:layout_weight="7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/item_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:focusable="true"
                android:ellipsize="marquee"
                android:scrollHorizontally="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:text="@string/title"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/item_artist"
                android:layout_below="@+id/item_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:focusable="true"
                android:ellipsize="marquee"
                android:scrollHorizontally="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:textSize="14sp"
                android:text="@string/artist"/>
        </RelativeLayout>

        <ImageButton
            android:id="@+id/item_list"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:src="@drawable/ic_queue_music_black_24dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/list"/>

        <ImageButton
            android:id="@+id/item_more"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:src="@drawable/ic_more_vert_black_24dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/more"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/item_album"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/player_control_layout"
        android:layout_below="@+id/item_bar"
        android:src="@drawable/default_album"
        android:contentDescription="@string/album"
        android:background="@color/light_gray"/>

    <SeekBar
        android:layout_below="@+id/item_album"
        android:layout_width="match_parent"
        android:layout_marginTop="-8dp"
        android:layout_height="wrap_content"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:progress="50"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:indeterminate="false"
        android:id="@+id/progressBar"/>


    <LinearLayout
        android:clickable="true"
        android:id="@+id/player_control_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <TextView
                android:id="@+id/start_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_example"
                android:layout_toStartOf="@+id/end_time"
                android:layout_toLeftOf="@+id/end_time"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_example"
                android:textSize="15sp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>

            <ImageButton
                android:id="@+id/play_btm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_play_arrow_black_24dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/play"
                android:layout_centerVertical="true" />

            <ImageButton
                android:id="@+id/prev_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_skip_previous_black_24dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_centerHorizontal="true"
                android:layout_toLeftOf="@+id/play_btm"
                android:layout_toStartOf="@+id/play_btm"
                android:layout_centerVertical="true"
                android:contentDescription="@string/prev" />

            <ImageButton
                android:id="@+id/next_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_skip_next_black_24dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_centerHorizontal="true"
                android:layout_toRightOf="@+id/play_btm"
                android:layout_toEndOf="@+id/play_btm"
                android:layout_centerVertical="true"
                android:contentDescription="@string/next" />

            <ImageButton
                android:id="@+id/like_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_thumb_up_black_24dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/dislike" />


            <ImageButton
                android:id="@+id/dislike_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_thumb_down_black_24dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/like" />


        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
