<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="120dp"
    android:layout_height="wrap_content"
    card_view:cardBackgroundColor="@color/cardview_light_background"
    card_view:cardCornerRadius="5dp"
    card_view:cardElevation="5dp"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/album_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@string/album"
            android:src="@drawable/default_album" />


        <TextView
            android:id="@+id/album_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_toRightOf="@+id/more"
            android:layout_toEndOf="@+id/more"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/album_image"
            android:lines="2"
            android:text="@string/example" />

        <ImageView
            android:foreground="?android:attr/selectableItemBackground"
            android:id="@+id/more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_more_vert_black_12dp"
            android:layout_alignTop="@id/album_name"
            android:contentDescription="@string/more" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_below="@id/album_name"
            android:text="@string/example"
            android:textSize="12sp"
            android:lines="1" />
    </RelativeLayout>
</android.support.v7.widget.CardView>
