<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:clickable="true"
    android:background="@drawable/ripple_bg">

    <ImageView
        android:id="@+id/album"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/album"
        android:src="@drawable/default_album"
        android:layout_centerVertical="true"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"/>

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/item_title"
        android:layout_width="match_parent"
        android:textSize="18sp"
        android:layout_toEndOf="@+id/album"
        android:layout_toRightOf="@+id/album"
        android:layout_toStartOf="@+id/space_drag_holder"
        android:layout_toLeftOf="@+id/space_drag_holder"
        android:layout_height="wrap_content"
        android:lines="1"
        android:focusable="true"
        android:ellipsize="marquee"
        android:scrollHorizontally="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:text="@string/example"/>

    <TextView
        android:id="@+id/item_details"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_centerVertical="true"
        android:textSize="12sp"
        android:layout_below="@+id/item_title"
        android:layout_toEndOf="@+id/album"
        android:layout_toRightOf="@+id/album"
        android:layout_toStartOf="@+id/space_drag_holder"
        android:layout_toLeftOf="@+id/space_drag_holder"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:focusable="true"
        android:scrollHorizontally="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:text="@string/example"/>

    <ImageView
        android:id="@+id/drag_holder"
        android:src="@drawable/ic_reorder_black_24dp"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/drag_handler" />

    <Space
        android:id="@+id/space_drag_holder"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true" />


</RelativeLayout>